# aios-project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  rust-toolchain.toml
.aios/skills/calculator/: SKILL.md
.aios/skills/example/: SKILL.md
.aios/skills/weather/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-python.yml  ci-rust.yml  ci.yml
ai-core/: Cargo.toml
ai-core/src/: lib.rs
boot/: Cargo.toml  README.md  build.rs
boot/src/: main.rs
crates/ai-hal/: Cargo.toml
crates/ai-hal/src/: cpu.rs  error.rs  lib.rs  memory.rs  security.rs  storage.rs
crates/ai-hal/tests/: hal_integration.rs
docs/: BOOT_ON_RPI4.md  CONVENTIONS.md  DRIVERS_HOST.md  GITHUB_SETUP.md  GIT_USAGE.md  HAL_LLAMA_CPP.md  HAL_LLAMA_CPP_BAREMETAL.md  MCP_SPEC.md  NEXT_STEPS.md  ON_DEVICE_INFERENCE.md  ROADMAP.md  SD_SETUP.md  SKILL_CREATION.md  architecture.md
docs/wiki/: Architecture.md  Getting-Started.md  Home.md  Inference-Backends.md  Offline-and-On-Device.md  README.md  Roadmap.md  Skill-Creation.md
driver-bridge/: Cargo.toml  README.md
driver-bridge/src/: main.rs
drivers/: Cargo.toml  README.md
drivers/examples/: host_demo.rs
drivers/src/: audio.rs  camera.rs  comms.rs  lib.rs
hal/: Cargo.toml
hal-bare/: Cargo.toml  README.md  build.rs
hal-bare/c/: llama_shim.c  sbrk.c  syscall_stubs.c
hal-bare/src/: inference.rs  lib.rs  timer.rs
hal/examples/: llama_inference.rs
hal/src/: audio.rs  camera.rs  cpu.rs  gpu.rs  lib.rs  llama_inference.rs  memory.rs  network.rs
kernel/: Cargo.toml
kernel-rpi/: Cargo.toml  README.md  build.rs  link.ld
kernel-rpi/.cargo/: config.toml
kernel-rpi/src/: allocator.rs  block.rs  boot.S  bridge.rs  fat32.rs  main.rs  pm.rs  skill_registry.rs  skills.rs
kernel/src/: lib.rs  main.rs
prototype/: .env.example  README.md  package-lock.json  package.json
prototype/src/: ai-core.ts  app-store.ts  driver-bridge.ts  index.ts  inference-ollama.ts  inference-transformers.ts  inference.ts  multimodal.ts  skill-runtime.ts  types.ts  ui.ts
python/: pyproject.toml
python/intent_engine/: __init__.py  hal_codegen.py  inference_router.py  models.py  parser.py
python/intent_engine/tests/: __init__.py  test_hal_codegen.py  test_inference_router.py  test_models.py  test_parser.py
registry/: skills.json
skills/: README.md
tools/: README.md  build-llama-baremetal.sh  build-rpi.sh  dlfcn-baremetal.h  ggml-cpu-baremetal-insert.txt  llama-baremetal-stubs.h  make-sd-image.sh  patch-gguf-init-from-buffer.py  qemu.sh  serial-bridge.mjs  simulate-rpi-bridge.sh  simulate-rpi.sh  simulate.sh
tools/patches/: ggml-cpu-baremetal.patch  ggml-impl-cinttypes.patch
ui/ai-shell/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/ai-shell/src/: AiShell.tsx  App.tsx  HalStatus.tsx  SkillList.tsx  index.css  main.tsx  types.ts
ui/ai-shell/src/hooks/: useHalStatus.ts  useSkills.ts
