[package]
name = "aios-kernel-rpi"
version = "0.1.0"
edition = "2021"
authors = ["AIOS Project"]
description = "AIOS kernel for Raspberry Pi 3/4 (aarch64)"

[features]
default = []
raspi3 = []  # raspi3b: UART 0x3F201000, peri 0x3F000000
llama = ["aios-hal-bare/llama"]  # 64MB heap + libllama for on-device inference

[[bin]]
name = "kernel-rpi"
path = "src/main.rs"

[dependencies]
aios-hal-bare = { path = "../hal-bare" }
