[package]
name = "aios-kernel"
version = "0.1.0"
edition = "2021"
authors = ["AIOS Project"]
description = "AIOS microkernel - minimal scheduling, memory, interrupts"

[lib]
crate-type = ["lib"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
